# husky

./: .gitattributes  .gitignore  .gitmodules  1  CONTRIBUTING.md  Cargo.toml  LICENSE  Main.lean  Makefile  NOTES.md  PITFALLS.md  README.md  Specs.lean  TODO.md  aliases.sh  cargo-timing.html  cloc_all.txt  env  env.fish  fwIn.txt  fwOut.txt  husky-analyzer.config.toml  husky-toolchain.toml  info  lakefile.lean  lakefile.olean  last  log  makefile  package-lock.json  pyrightconfig.json  requirements.in  requirements.txt  rust-toolchain  rustc-ice-2023-09-20T19:08:39.434384726Z-110406.txt  rustc-ice-2024-11-30T03_11_35-20356.txt  syn-tree-build-timings.html  tree.txt  voice-assistant.json  wdIn.txt  (+1 more)
common-rs/abstraction/cyclic-slice/: Cargo.toml
common-rs/abstraction/cyclic-slice/src/: lib.rs
core/: .gitignore  Cargo.toml  Makefile  makefile  udeps.txt
core/.cargo/: config  config.toml
core/__c_code_gen__/: husky_any.c  husky_any.h  husky_ml_datasets.c  husky_ml_datasets.h  husky_ml_models.c  husky_ml_models.h  husky_vm_interface.c  husky_vm_interface.h
core/crates/abstraction/arena/: Cargo.toml
core/crates/abstraction/interner/: Cargo.toml
core/crates/abstraction/json-map/: Cargo.toml
core/crates/abstraction/json-result/: Cargo.toml
core/crates/abstraction/reserve/: Cargo.toml
core/crates/try/: Cargo.toml
core/csrc/: husky_vm.c  husky_vm.h
core/csrc-gen/: husky_vm_interface.c  husky_vm_interface.h
core/mk/: examples.mk  installs.mk  projects.mk  tests.mk
core/scripts/: build_c.sh  test-compiler.sh  vscode_prepublish.sh
crates/arena/: Cargo.toml
crates/arena/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: _session.rs  dev_source.rs  error.rs  file.rs  keyword.rs  lib.rs  print.rs  session.rs  show.rs  templates.rs  utils.rs
crates/file_db/: Cargo.toml
crates/file_db/src/: change.rs  input.rs  lib.rs
crates/flycheck/: Cargo.toml
crates/flycheck/src/: lib.rs
crates/husky-lang-server/: Cargo.toml
crates/husky-lang-server/src/: lib.rs  run_server.rs  server.rs  server_cfg.rs  task.rs
crates/husky_lang_server/: Cargo.toml
crates/husky_lang_server/src/: capabilities.rs  config.rs  diagnostics.rs  diff.rs  from_proto.rs  fs.rs  init_connection.rs  initialize_connection.rs  lib.rs  line_collection.rs  line_index.rs  lsp_error.rs  lsp_ext.rs  lsp_utils.rs  markdown.rs  op_queue.rs  reload.rs  run_server.rs  semantic_tokens.rs  server.rs  server_capabilities.rs  server_config.rs  server_snapshot.rs  source_root_config.rs  task.rs  taskpool.rs  utils.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/project/: Cargo.toml
crates/project/src/: discover_projects.rs  lib.rs  manifest_path.rs
crates/salsa/: Cargo.toml
crates/salsa/src/: debug.rs  lib.rs  plumbing.rs  revision.rs  runtime.rs  storage.rs
crates/salsa/tests/: cycles.rs  lru.rs  on_demand_inputs.rs
crates/try/: Cargo.toml
crates/try/src/: lib.rs  try_atomic.rs  try_control_flow.rs  try_monad.rs  try_mut_ref.rs  try_random.rs  try_rayon.rs  try_ref.rs  try_salsa.rs  try_serde.rs  try_trait.rs
crates/try/try-alloc/: Cargo.toml
crates/try/try-egui-dock/: Cargo.toml
crates/try/try-image-processing/: Cargo.toml
crates/try/try-other/: Cargo.toml
crates/try/try-quick-sort/: Cargo.toml
crates/try/try-salsa/: Cargo.toml
crates/try/try-tch-rs/: Cargo.toml
gui/husky-debugger-gui/: Cargo.toml  bootstrap.js  package-lock.json  package.json  webpack.config.js
gui/husky-debugger-gui-sycamore/: Cargo.toml  index.html
gui/husky-debugger-gui-sycamore/src/: context.rs  main.rs
gui/husky-debugger-gui-yew/: Cargo.toml
gui/husky-debugger-gui-yew/src/: components.rs  context.rs  main.rs  store.rs
gui/husky-debugger-gui/src/: components.rs  lib.rs  main.rs  services.rs  state.rs
gui/husky-debugger-gui/static/: index.html
gui/husky-tracer-gui-sycamore/: 0  1  Cargo.toml  README.md  index.css  index.html
gui/husky-tracer-gui-sycamore/src/: abstraction.rs  cell.rs  components.rs  context.rs  init.rs  main.rs  store.rs  utils.rs
interfaces/husky-vm-interface/: Cargo.toml  build.rs  makefile
interfaces/husky-vm-interface/csrc/: husky_vm.c  husky_vm.h
interfaces/husky-vm-interface/layout/: primitive.rs
interfaces/husky-vm-interface/src/: any.rs  binding.rs  context.rs  error.rs  lib.rs  linkage.rs  register.rs  tests.rs
old/husky-eval/: Cargo.toml
old/husky-eval/src/: db.rs  evaluator.rs
old/husky-linkage-table/: Cargo.toml
old/husky-linkage-table/src/: config.rs  form.rs  lib.rs  table.rs
old/husky-rust-code-gen/: Cargo.toml
old/husky-rust-code-gen/src/: contains_eval_ref.rs  eval_context.rs  init_content.rs  lib.rs  lib_rs_content.rs  linkage_collector.rs  mangle.rs  registration_content.rs  utils.rs
playground/goodstein_ocaml/: dune-project  makefile
playground/goodstein_ocaml/lib/: dune  lib.ml  lib.mli
playground/goodstein_ocaml/test/: dune
playground/test-sealed/: Cargo.toml
playground/test-sealed/src/: lib.rs
registry/ad-hoc-devsoul-dependency/: Cargo.toml
registry/ad-hoc-devsoul-dependency/src/: lib.rs  ugly.rs
registry/ad-hoc-task-dependency/: Cargo.toml
registry/ad-hoc-task-dependency/macros/: Cargo.toml
registry/ad-hoc-task-dependency/src/: lib.rs  ugly.rs
registry/cybertron-mini-lean-tokens-0.1.0/: Cargo.toml  Corgi.toml
registry/cybertron-mini-lean-tokens-0.1.0/src/: file.rs  lib.rs  position.rs
registry/cybertron-mini-lean-tokens-0.1.0/target-rs/: Cargo.toml
registry/latex-ast-hsy-0.1.0/: Cargo.toml  Corgi.toml
registry/latex-ast-hsy-0.1.0/src/: file.rs  lib.hsy  lib.rs  tracker.rs
registry/latex-ast-hsy-0.1.0/target-rs/: Cargo.toml
registry/mnist-0.1.0/: Cargo.toml  Corgi.toml  task.hsy
registry/mnist-0.1.0/src/: dataset.rs  input_id.rs  lib.hsy  lib.rs  task.hsy  task.rs
registry/mnist-0.1.0/target-rs/: Cargo.toml
static/__husky/: Cargo.toml
static/__husky/src/: __main_utils.rs  init.rs  registration.rs  root.rs
static/husky-root-static-defn/: Cargo.toml
static/husky-root-static-defn/src/: b32.rs  clone.rs  etc.rs  f32.rs  i32.rs  lib.rs  thick_fp.rs  vec.rs
(+24383 files in other folders)
